[gd_scene load_steps=23 format=2]

[ext_resource path="res://textures/overworld/mecha_slash.png" type="Texture" id=1]
[ext_resource path="res://textures/overworld/mecha_missile.png" type="Texture" id=2]
[ext_resource path="res://textures/overworld/mecha_idle.png" type="Texture" id=3]
[ext_resource path="res://textures/overworld/mecha_gun.png" type="Texture" id=4]
[ext_resource path="res://textures/overworld/hp_bar.png" type="Texture" id=5]
[ext_resource path="res://textures/overworld/force_field.png" type="Texture" id=6]
[ext_resource path="res://textures/overworld/hp_bar_under.png" type="Texture" id=7]
[ext_resource path="res://textures/overworld/hp_bar_over.png" type="Texture" id=8]
[ext_resource path="res://scenes/Ultrazort.gd" type="Script" id=9]
[ext_resource path="res://textures/overworld/shield_bar.png" type="Texture" id=10]
[ext_resource path="res://scenes/GunBullet.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/MissileBullet.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/SlashBullet.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.9435, 162.085 )

[sub_resource type="Animation" id=3]
resource_name = "gun"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_spawn_gun"
}, {
"args": [  ],
"method": "_spawn_gun"
}, {
"args": [  ],
"method": "_spawn_gun"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "missile"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_spawn_missile"
}, {
"args": [  ],
"method": "_spawn_missile"
}, {
"args": [  ],
"method": "_spawn_missile"
}, {
"args": [  ],
"method": "_spawn_missile"
}, {
"args": [  ],
"method": "_spawn_missile"
}, {
"args": [  ],
"method": "_spawn_missile"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "slash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_spawn_slash"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "take_damage"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.7, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.25, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -16.737, 0 ), Vector2( 18.9686, 0 ), Vector2( -19.688, 0 ), Vector2( 15.9736, 0 ), Vector2( -10.1304, 0 ), Vector2( 19.8348, 0 ), Vector2( -37.3941, 0 ), Vector2( -10.5672, 0 ), Vector2( -22.1592, 0 ), Vector2( -1.81154, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "flash"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.07, 0.09, 0.1, 0.14, 0.16, 0.18, 0.21, 0.25, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.615686 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.615686 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.615686 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.64 ), Color( 1, 1, 1, 0.658824 ), Color( 1, 1, 1, 0.48 ), Color( 1, 1, 1, 0.513726 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "reset"
length = 0.001
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Ultrazort" type="Area2D" groups=[
"ultrazort",
]]
position = Vector2( 214.792, 365.425 )
script = ExtResource( 9 )
slash_bullet = ExtResource( 13 )
gun_bullet = ExtResource( 11 )
missile_bullet = ExtResource( 12 )

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( 150.633, 2.78949 )
shape = SubResource( 2 )

[node name="anims" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/gun = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/missile = SubResource( 5 )
anims/slash = SubResource( 6 )
anims/take_damage = SubResource( 9 )
next/gun = "idle"
next/missile = "idle"
next/slash = "idle"

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( -16.737, 0 )
frames = SubResource( 1 )
frame = 3

[node name="shields" type="TextureProgress" parent="sprite"]
margin_left = 267.792
margin_top = -167.37
margin_right = 332.792
margin_bottom = 172.63
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 10 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="TextureProgress" parent="sprite"]
margin_left = 350.083
margin_top = -167.37
margin_right = 415.083
margin_bottom = 172.63
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 5 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="force_field" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 6 )

[node name="anims" type="AnimationPlayer" parent="force_field"]
autoplay = "reset"
anims/flash = SubResource( 7 )
anims/reset = SubResource( 8 )

[node name="bullet_spawnpoint" type="Position2D" parent="."]
position = Vector2( -2.78952, -85.0799 )

[node name="missile_spawnpoint" type="Position2D" parent="."]
position = Vector2( 133.896, -149.238 )

[node name="slash_spawnpoint" type="Position2D" parent="."]
position = Vector2( 1.39462, 0 )
